Java 8 version
Signed-off-by: Thian Phin <lilduckling@hotmail.com>