@@ -16,6 +16,9 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Iterator;
 import java.util.Optional;
 import java.util.function.BiConsumer;
 import java.util.regex.Pattern;
@@ -33,8 +36,8 @@ public final class Utils {
     public static String extractMinimalClassnameId(JavaType baseType, JavaType child) {
         // code taken from Jackson's MinimalClassNameIdResolver constructor and method idFromValue
         
-        var base = baseType.getRawClass().getName();
-        var ix = base.lastIndexOf('.');
+        String base = baseType.getRawClass().getName();
+        int ix = base.lastIndexOf('.');
         
         String basePackagePrefix;
         if (ix < 0) // can this ever occur?
@@ -42,7 +45,7 @@ public final class Utils {
         else
             basePackagePrefix = base.substring(0, ix + 1);
         
-        var n = child.getRawClass().getName();
+        String n = child.getRawClass().getName();
         if (n.startsWith(basePackagePrefix)) { // note: we will leave the leading dot in there
             return n.substring(basePackagePrefix.length() - 1);
         } else {
@@ -52,10 +55,10 @@ public final class Utils {
     
     
     public static void merge(JsonNode mainNode, JsonNode updateNode) {
-        var fieldNames = updateNode.fieldNames();
+        Iterator<String> fieldNames = updateNode.fieldNames();
         while (fieldNames.hasNext()) {
-            var fieldName = fieldNames.next();
-            var jsonNode = mainNode.get(fieldName);
+            String fieldName = fieldNames.next();
+            JsonNode jsonNode = mainNode.get(fieldName);
             // if field exists and is an embedded object
             if (jsonNode != null && jsonNode.isObject()) {
                 merge(jsonNode, updateNode.get(fieldName));
@@ -63,7 +66,7 @@ public final class Utils {
             else {
                 if (mainNode instanceof ObjectNode) {
                     // Overwrite field
-                    var value = updateNode.get(fieldName);
+                    JsonNode value = updateNode.get(fieldName);
                     ((ObjectNode)mainNode).set(fieldName, value);
                 }
             }
@@ -72,12 +75,12 @@ public final class Utils {
     
 
     public static void visit(JsonNode o, String path, BiConsumer<ObjectNode, String> f) {
-        var parts = path.split(Pattern.quote("/"));
-        var lastPart = parts[parts.length - 1];
-        var otherParts = Arrays.copyOfRange(parts, 0, parts.length - 1);
-        var p = o;
-        for (var name : otherParts) {
-            var child = p.get(name);
+        String[] parts = path.split(Pattern.quote("/"));
+        String lastPart = parts[parts.length - 1];
+        String[] otherParts = Arrays.copyOfRange(parts, 0, parts.length - 1);
+        JsonNode p = o;
+        for (String name : otherParts) {
+            JsonNode child = p.get(name);
             if (child == null)
                 child = ((ObjectNode)p).putObject(name);
             p = child;
@@ -87,7 +90,7 @@ public final class Utils {
 
     public static String camelCaseToSentenceCase(String propertyName) {
         // Code found here: http://stackoverflow.com/questions/2559759/how-do-i-convert-camelcase-into-human-readable-names-in-java
-        var s = propertyName.replaceAll(
+        String s = propertyName.replaceAll(
             "(?<=[A-Z])(?=[A-Z][a-z])"
             + "|(?<=[^A-Z])(?=[A-Z])"
             + "|(?<=[A-Za-z])(?=[^A-Za-z])",
@@ -98,11 +101,11 @@ public final class Utils {
     }
 
     public static JavaType resolveElementType(JavaType propertyType, BeanProperty prop, ObjectMapper objectMapper) {
-        var containedType = propertyType.containedType(0);
+        JavaType containedType = propertyType.containedType(0);
         if (containedType.getRawClass() == Object.class) {
             // Scala BS
             // https://github.com/FasterXML/jackson-module-scala/wiki/FAQ#deserializing-optionint-and-other-primitive-challenges
-            var jsonDeserialize = prop.getAnnotation(JsonDeserialize.class);
+        	JsonDeserialize jsonDeserialize = prop.getAnnotation(JsonDeserialize.class);
             if (jsonDeserialize != null)
                 return objectMapper.getTypeFactory().constructType(jsonDeserialize.contentAs());
             else {
@@ -117,7 +120,7 @@ public final class Utils {
     }
     
     public static ArrayNode getRequiredArrayNode(ObjectNode objectNode) {
-        var requiredNode = objectNode.get("required");
+        JsonNode requiredNode = objectNode.get("required");
         
         if (requiredNode == null) {
             requiredNode = JsonNodeFactory.instance.arrayNode();
@@ -132,7 +135,7 @@ public final class Utils {
     }
 
     public static ObjectNode getOrCreateObjectChild(ObjectNode parentObjectNode, String name) {
-        var childNode = parentObjectNode.get(name);
+        JsonNode childNode = parentObjectNode.get(name);
         
         if (childNode == null) {
             childNode = JsonNodeFactory.instance.objectNode();
@@ -145,7 +148,7 @@ public final class Utils {
 
     public static String extractTypeName(JavaType type) {
         // use JsonTypeName annotation if present
-        var annotation = type.getRawClass().getDeclaredAnnotation(JsonTypeName.class);
+    	JsonTypeName annotation = type.getRawClass().getDeclaredAnnotation(JsonTypeName.class);
         return Optional.ofNullable(annotation)
                 .flatMap(a -> Optional.of(a.value()))
                 .filter(a -> !a.isEmpty())
@@ -156,23 +159,24 @@ public final class Utils {
         // Annotations cannot implement interface, so we have to check each and every
         // javax-annotation... To prevent bugs with missing groups-extract-impl when new
         // validation-annotations are added, I've decided to do it using reflection
-        var annotationClass = annotation.annotationType();
+        Class<? extends Annotation> annotationClass = annotation.annotationType();
+        List<Class<?>> arr= new ArrayList<>();
         if (annotationClass.getPackage().getName().startsWith("javax.validation.constraints")) {
             try {
-                var groups = (Class<?>[]) annotationClass.getMethod("groups").invoke(annotation);
-                return List.of(groups);
+                Class<?>[] groups = (Class<?>[]) annotationClass.getMethod("groups").invoke(annotation);
+                arr = Arrays.asList(groups);
             } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e)  {
-                return List.of();
             }
+
         } 
         else if (annotation instanceof JsonSchemaInject)
-            return List.of(((JsonSchemaInject)annotation).javaxValidationGroups());
-        else
-            return List.of();
+        	arr=Arrays.asList(((JsonSchemaInject)annotation).javaxValidationGroups());
+
+        return Collections.unmodifiableList(arr);
     }
     
     public static JavaType getSuperClass(JavaType type) {
-        for (var superType : ClassUtil.findSuperTypes(type, null, false))
+        for (JavaType superType : ClassUtil.findSuperTypes(type, null, false))
             if (superType.getRawClass().isAnnotationPresent(JsonTypeInfo.class))
                 return superType;
         // else
